Fix homepage background on mobile devices

--- a/app/styles/homepage.css
+++ b/app/styles/homepage.css
@@ -1,8 +1,9 @@
 main {
     background-image: url('../img/homepage/homepage-800.png');
     background-attachment: fixed;
-    background-position: center center;
-    background-size: cover;
+    background-position: top center;
+    background-size: 100%;
+    background-repeat: no-repeat;
     padding-top: 0;
     padding-bottom: 5em;
 }
